// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Migrations migrates styles to field config overrides and defaults 1`] = `
{
  "fieldConfig": {
    "defaults": {
      "custom": {
        "align": "right",
        "displayMode": undefined,
      },
      "decimals": 2,
      "displayName": "",
      "unit": "short",
    },
    "overrides": [
      {
        "matcher": {
          "id": "byName",
          "options": "Time",
        },
        "properties": [
          {
            "id": "displayName",
            "value": "Time",
          },
          {
            "id": "unit",
            "value": "time: YYYY-MM-DD HH:mm:ss",
          },
          {
            "id": "custom.align",
            "value": null,
          },
        ],
      },
      {
        "matcher": {
          "id": "byName",
          "options": "ColorCell",
        },
        "properties": [
          {
            "id": "unit",
            "value": "currencyUSD",
          },
          {
            "id": "decimals",
            "value": 2,
          },
          {
            "id": "custom.displayMode",
            "value": "color-background",
          },
          {
            "id": "custom.align",
            "value": "left",
          },
          {
            "id": "thresholds",
            "value": {
              "mode": "absolute",
              "steps": [
                {
                  "color": "rgba(245, 54, 54, 0.9)",
                  "value": -Infinity,
                },
                {
                  "color": "rgba(237, 129, 40, 0.89)",
                  "value": 5,
                },
                {
                  "color": "rgba(50, 172, 45, 0.97)",
                  "value": 10,
                },
              ],
            },
          },
        ],
      },
      {
        "matcher": {
          "id": "byName",
          "options": "ColorValue",
        },
        "properties": [
          {
            "id": "unit",
            "value": "Bps",
          },
          {
            "id": "decimals",
            "value": 2,
          },
          {
            "id": "links",
            "value": [
              {
                "targetBlank": true,
                "title": "",
                "url": "http://www.grafana.com",
              },
            ],
          },
          {
            "id": "custom.displayMode",
            "value": "color-text",
          },
          {
            "id": "custom.align",
            "value": null,
          },
          {
            "id": "thresholds",
            "value": {
              "mode": "absolute",
              "steps": [
                {
                  "color": "rgba(245, 54, 54, 0.9)",
                  "value": -Infinity,
                },
                {
                  "color": "rgba(237, 129, 40, 0.89)",
                  "value": 5,
                },
                {
                  "color": "rgba(50, 172, 45, 0.97)",
                  "value": 10,
                },
              ],
            },
          },
        ],
      },
    ],
  },
  "transformations": [],
}
`;

exports[`Table Migrations migrates transform out to core transforms 1`] = `
{
  "fieldConfig": {
    "defaults": {
      "custom": {},
    },
    "overrides": [],
  },
  "transformations": [
    {
      "id": "seriesToColumns",
      "options": {
        "reducers": [],
      },
    },
  ],
}
`;

exports[`Table Migrations migrates transform out to core transforms 2`] = `
{
  "fieldConfig": {
    "defaults": {
      "custom": {},
    },
    "overrides": [],
  },
  "transformations": [
    {
      "id": "seriesToRows",
      "options": {
        "reducers": [],
      },
    },
  ],
}
`;

exports[`Table Migrations migrates transform out to core transforms 3`] = `
{
  "fieldConfig": {
    "defaults": {
      "custom": {},
    },
    "overrides": [],
  },
  "transformations": [
    {
      "id": "reduce",
      "options": {
        "includeTimeField": false,
        "reducers": [
          "mean",
          "max",
          "lastNotNull",
        ],
      },
    },
  ],
}
`;

exports[`Table Migrations migrates transform out to core transforms 4`] = `
{
  "fieldConfig": {
    "defaults": {
      "custom": {},
    },
    "overrides": [],
  },
  "transformations": [
    {
      "id": "merge",
      "options": {
        "reducers": [],
      },
    },
  ],
}
`;
